# slipstream

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/examples/: dump.rs
crates/core/src/: dbc.rs  error.rs  export.rs  health.rs  lib.rs  model.rs  predicate.rs  query.rs  store.rs
crates/core/src/ingest/: asc.rs  blf.rs  mod.rs
crates/core/tests/: ingest_roundtrip.rs
crates/gui-egui/: Cargo.toml
crates/gui-egui/src/: app.rs  main.rs
