[workspace]
resolver = "2"
members = ["crates/core", "crates/gui-egui"]

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

# Shared deps so core and (future) gui-tauri pin identical versions.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Release profile tuned for the analysis workload: this is a number-crunching
# tool, so optimize hard. `lto = "thin"` keeps link times sane.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
