[package]
name = "slipstream-gui-egui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "egui front-end for slipstream-core (the dev/validation UI; a Tauri front-end will reuse the same core query API)."

[[bin]]
name = "slipstream"
path = "src/main.rs"

[dependencies]
slipstream-core = { path = "../core" }
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
egui_extras = "0.31"
rfd = "0.17"

[dev-dependencies]
# Headless render of the GUI to PNG snapshots, so the UI can be visually
# verified without a display (the model reads the PNGs; users get them too).
egui_kittest = { version = "0.31", features = ["wgpu", "snapshot", "eframe"] }
